--- a/scr/requirements.txt
+++ b/scr/requirements.txt
@@ -14,11 +14,12 @@ opencv-contrib-python
 Pillow
 PyMySQL==1.0.2
 seaborn
--U scikit-learn
+scikit-learn
 torchsummaryX==1.3.0
 fiftyone==0.17.2
 ipykernel
 ipywidgets>=7.0.0
 
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.7.1+cu110
+torch==1.7.1+cu110 
+torchvision==0.8.2+cu110
